--- a/Main.Rmd
+++ b/Main.Rmd
@@ -45,10 +45,11 @@ We thank the U.S. National Marine Fisheries Service for support, and we acknowle
 
 \clearpage
 
+**This shows you a realistic Rmd for a journal article. This was an early version and I've cut out many paragraphs here and there to shorten it, but it is still has all the parts.**
+
+Note that the repository is a self-contained paper with all the data and the analyses are redone completely whenever Main.Rmd is re-knit. So if the data change, all the analyses will be updated.
 
 \begin{abstract}
-
-**This is the main Rmd file and shows you a realistic Rmd for a journal article. This was an early version and I've cut paragraphs here and there to shorten it, but it is still has all the parts.**
 
 Commercial landings of sardine are known for strong year-to-year fluctuations. A key driver is thought to be environmental variability, to which small forage fish are especially sensitive. We examined the environmental drivers associated with landings fluctuations in the Indian oil sardine using a 32-year time series of quarterly catch. Past research suggested a variety of influential variables: precipitation, upwelling intensity, ocean temperature (SST), chlorophyll concentration and large-scale coupled atmosphere–ocean phenomena (ENSO). Using the life history of the Indian oil sardine, we developed hypotheses concerning how these variables might affect landings and tested them using generalized additive models which allow non-linear response curves and dynamic linear models which allow time-varying responses. We found significant correlation for three variables: upwelling intensity, an ENSO index, and the multi-year average nearshore SST.  Upwelling intensity can have both a positive effect (fueling higher food availability) and a negative effect at extreme intensity (surface anoxia). The negative effect was apparent for both monsoon and post-monsoon catch. However, the most significant correlation (adjusted R$^2$ of 67.5\%) was between the 2.5 year average nearshore SST and post-monsoon landings. The multi-year average SST also been identified as a predictor for Pacific and southern African sardine fluctuations, suggesting that the average SST over the sardine lifespan successfully captures a variety of factors which predict future abundance.
 \newline\newline
@@ -67,15 +68,11 @@ Environmental variability is known to be a key driver of population variability 
 The Indian oil sardine  is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and historically has comprised approximately 25% of the marine catch in the Indian fisheries [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal, peaking after the summer monsoon period in October-December and reaching a nadir in spring before the summer monsoon in April-June (Figure `r ref("fig:catch")`). At the same time, the landings of this small pelagic finfish are highly variable from year to year.  Small pelagics are well known to exhibit high variability in biomass due to the effects of environmental conditions on survival and recruitment, but in this fishery, environmental conditions also affect exposure of sardines to the fishery.  Until recently, the Indian oil sardine fishery was artisanal and based on small human or low powered boats with no refrigeration. The fishery was confined to nearshore waters, and thus migration of sardines in and out of the coastal zone greatly affected exposure to the fishery and hence landings.
 
 <!-- review of looking at env vars -->
-Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine. Precipitation during the monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002; @XuBoyce2009; @PitchaikaniLipton2012].  Although many studies have looked for and some have found correlations between precipitation and landings, the reported relationships are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011],  with direct measures of productivity such as nearshore zooplankton and phytoplankton abundance [@Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @PitchaikaniLipton2012; @Menonetal2019], and with nearshore sea surface temperature (SST)  [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991; @Suprabaetal2016]. SST can affect both somatic growth rates and juvenile survival but in this system also can cause fish to move offshore and away from the shore-based fishery. The multi-year average sea temperature is postulated to have effects on recruitment and the survival of larval and juvenile sardines, which affect the later  overall abundance [@Takasukaetal2007; @Checkleyetal2017]. The El Niño/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) and correlations have been found between ENSO indices and sardine landings [@Suprabaetal2016; @Rohitetal2018] and coastal anoxic events which affect sardines [@Vallivattathillametal2017].
-
-In this paper, we study the utility of environmental covariates from remote sensing to explain year-to-year variability using a long-term time series of quarterly Indian oil sardine landings. This time series is derived from a stratified sampling design that surveys the fishery landing sites along the southwest Indian coast and was first implemented in the 1950s [@Srinathetal2005]. The goal is to identify environmental covariates which can explain catch variability and improve the accuracy of short-term catch forecasts. Landings are a product of the biomass, the catchability, and the effort. A traditional auto-correlated catch model (ARIMA) can model smooth changes in landings, such as due to changes in fleet size or multi-year biomass changes, but the environment adds a large component of year-to-year variability that such a model does not capture. The environment affects food resources which affects recruitment through spawning and survival, and thus the biomass available to the fishery. In addition, in the Indian oil sardine system, catchability is strongly affected by the environment by affecting the inshore versus offshore distribution of sardine.  The fishery is restricted to the nearshore < 50 km offshore [@Rohitetal2018]. When the sardines move offshore to spawn or to avoid hypoxic or excessively warm water, they are no longer available to the fishery.  Thus, through its effects on recruitment and catchability, the environment has the potential to drive year-to-year changes in landings. The covariates which we study (Table `r ref("tab:hypotheses")`) are linked to aspects of oil sardine life history that are expected to affect catch via catchability or biomass. Covariates from remote sensing are the focus because they are available over a wide spatial extent at a daily and monthly resolution thus are practical for use in operational forecasts. A better understanding of how and whether remote sensing data explains variation in seasonal catch will support future efforts to use satellite data to improve catch forecasts. 
+Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine. Precipitation during the monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002; @XuBoyce2009; @PitchaikaniLipton2012].  Although many studies have looked for and some have found correlations between precipitation and landings, the reported relationships are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011],  with direct measures of productivity such as nearshore zooplankton and phytoplankton abundance [@Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @PitchaikaniLipton2012; @Menonetal2019], and with nearshore sea surface temperature (SST)  [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991; @Suprabaetal2016]. 
 
 ## Catch modeling versus biomass modeling
 
 Modeling and forecasting landings data using statistical models fit to annual or seasonal catch time series has a long tradition in fisheries and has been applied to many species [@Mendelssohn1981; @CohenStone1987; @NobelSathianandan1991; @StergiouChristou1996;  @Lloretetal2000; @Georgakarakosetal2006; @Hansenetal2006; @Pristaetal2011; @FarmerFroeschke2015; @Lawer2016], including oil sardines [@Srinath1998; @VenugopalanSrinath1998]. These models can be used to identity the variables correlated with catch fluctuations and can be used to provide landings forecasts which are useful for fishery managers and the fishing industry. An example of the former is using catch forecasts to set or give warnings of seasonal fishery closures if the forecasted catch is higher than the allowed catch limits [@FarmerFroeschke2015]. An example of the latter is the annual Gulf and Atlantic menhaden forecast produced by NOAA Fisheries [@Schaafetal1975; @Hansenetal2006]. This multiple regression model has been used for the last 45 years to produce an annual forecast of menhaden landings, which is used for planning purposes by the industry, not only the fishers but also fish catch sellers and buyers, businesses which provide fisheries gear, and banks which provide financing [@Hansenetal2006].
-
-For the purpose of our study, the assumption of a tight relationship between landings and abundance is not necessary. The objective is to understand what drives landings variability, whether it is due to biomass or catchability variation. That said, Indian oil sardine landings are often assumed to reflect the total abundance for reasons specific to the species and the fishery [cf. @Kripaetal2018]. Historically, the fishery was artisanal: small boats with small motors, no refrigeration,  and limited to the near shore. The ring seine was introduced in the 1980s, but widespread mechanization of the fleet is a very recent development. Fishers with small boats have limited ability to target the stock, at least not to the degree that landings remain constant as a stock declines. That pattern can be observed in a large, mobile, highly mechanized fleet. The fishery is unregulated, except for a brief closure during the monsoon months, thus the landings are not being affected by area closures and catch limits. Finally, the fishery is dispersed along the entire coastline rather than being focused from a few large ports. Again, for our objectives, it is not necessary that landings be a tight index of biomass, but there are many reasons to assume that this relationship is strong.
 
 ### Study Area
 
@@ -88,8 +85,6 @@ The Indian oil sardine fishery is restricted to the narrow strip of the western 
 
 After eggs are spawned, they develop rapidly into larvae [@Nair1959].  The phytoplankton bloom that provide sardine larvae food is dependent upon nutrient influx from coastal upwelling and runoff from rivers during the summer monsoon and early fall. The blooms start in the south near the southern tip of India in June, increase in intensity and spread northward up the coast [@Smitha2010]. Variation in the bloom initiation time and intensity leads to changes in the food supply and to corresponding changes in the growth and survival of larvae and in the later recruitment of 0-year sardines into the fishery [@Georgeetal2012].  Oil sardines grow rapidly during their first few months, and 0-year fish (40mm to 100mm) from early spawning appear in the catch in August and September in most years [@Nairetal2016; @AntonyRaja1970].  As the phytoplankton bloom spreads northward, the oil sardines follow, and the oil sardine fishery builds from south to north during the post-monsoon period. Oil sardines remain inshore feeding throughout the winter months, until March to May when the inshore waters warm considerably and sardines move offshore to deeper waters [@Chidambaram1950].  Catches of sardines are correspondingly low during this time for all size classes.  The age at first maturity occurs at approximately 150 mm size [@Nairetal2016], which is reached within one year.  When the summer monsoon returns, the oil sardine cycle begins anew.
 
-Catches along the Kerala coast are high throughout the year except during quarter 2, Apr-Jun (Figure `r ref("fig:catch")`). The age-distribution caught by the fishery varies through the year.  The fishery is closed during June to mid-July during the monsoon and peak spawning, and when it resumes in mid-July, it is first dominated by 1-2.5 year old mature fish [@AntonyRaja1969; @Bensam1964a; @Nairetal2016].   In August or September a spike of 0-year (40mm) juveniles from the June spawning typically appears in the catch [@AntonyRaja1969;  @Nairetal2016] and another spike of 0-year fish is sometimes seen in February from the late fall spawning [@PrabhuDhulkhed1967; @PrabhuDhulkhed1970].  From October through June, the catch is dominated by fish from 120mm-180mm [@PrabhuDhulkhed1970; @AntonyRaja1970; @Nairetal2016] which is a mix of 0-year, 1-year and 2-year fish [@Nairetal2016; @Rohitetal2018].  
-
 <!--
 Example of cutting out a paragraph using a comment block. Here I am not sure if I want to use some of these ideas so keep it for now.
 
@@ -101,7 +96,7 @@ As the success of commercial fishery for each season is determined by the number
 
 ## Sardine landing data
 
-Quarterly fish landing data have been collected by the Central Marine Fisheries Research Institute (CMFRI) in Kochi, India, since the early 1950s using a stratified multi-stage sample design [@Srinathetal2005]. The survey visits the fish landing centers along the entire southwest coast of India and samples the catch from the variety of boat types and gear types used in the coastal fishery. Landings estimates are available for all the coastal states, however we model the catch for the state of Kerala only, where the longest time series is available and the overwhelming majority of oil sardines are landed (Figure `r ref("fig:catch")`). The quarterly landings (metric tons) for oil sardine landed from all gears in Kerala were obtained from CMFRI reports (1956-1984) and online databases (1985-2015); see Appendix G for data sources. The quarterly landing data were log-transformed to stabilize the variance. 
+Quarterly fish landing data have been collected by the Central Marine Fisheries Research Institute (CMFRI) in Kochi, India, since the early 1950s using a stratified multi-stage sample design [@Srinathetal2005]. The survey visits the fish landing centers along the entire southwest coast of India and samples the catch from the variety of boat types and gear types used in the coastal fishery. Landings estimates are available for all the coastal states, however we model the catch for the state of Kerala only, where the longest time series is available and the overwhelming majority of oil sardines are landed (Figure `r ref("fig:catch")`). 
 
 <!--
 
@@ -115,7 +110,7 @@ We analyzed monthly composites of the following environmental data derived from 
 
 We used the chlorophyll-a products developed by the Ocean Biology Processing Group in the Ocean Ecology Laboratory at the NASA Goddard Space Flight Center. For 1997 to 2002, we used the chlorophyll-a 2014.0 Reprocessing (R2014.0) product from the Sea-viewing Wide Field-of-view Sensor (SeaWiFS) on the Orbview-2 satellite. These data are on a 0.1 degree grid.  For 2003 to 2017, we used the MODIS-Aqua product on a 0.05 degree grid. These CHL data are taken from measurements by the Moderate Resolution Imaging Spectroradiometer (MODIS) on NASA's Aqua Spacecraft.  The SST and CHL data were averaged across thirteen 1 degree by 1 degree boxes which roughly parallel the bathymetry (Figure `r ref("fig:studyarea")`).  The SST and CHL satellite data were retrieved from NOAA remote-sensing data servers;  see Appendix G for data sources and references.  
 
-For an index of coastal upwelling, we used three indices. The first was the sea surface temperature differential between near shore and 3 degrees offshore based on the index described by Naidu et al. [-@Naiduetal1999] and BR et al. [-@Smithaetal2008].  For SST, we used the remote sensing sea surface temperature data sets described above. This SST-based upwelling index has been validated as a more reliable metric of upwelling off the coast of Kerala compared to wind-based upwelling indices [@Smithaetal2008]. The SST-based upwelling index and chlorophyll-a concentration have a strong temporal association (Figure `r ref("fig:SSTts")`). The second index was simply average nearshore SST along the Kerala coasts (average of boxes 2-5 in Figure `r ref("fig:studyarea")`). The third index was the Bakun index based on wind stress. The index is computed from the the x- and y- components of Ekman Transport. See Appendix G for data sources and references.
+For an index of coastal upwelling, we used three indices. The first was the sea surface temperature differential between near shore and 3 degrees offshore based on the index described by Naidu et al. [-@Naiduetal1999] and BR et al. [-@Smithaetal2008].  For SST, we used the remote sensing sea surface temperature data sets described above. This SST-based upwelling index has been validated as a more reliable metric of upwelling off the coast of Kerala compared to wind-based upwelling indices [@Smithaetal2008].
 
 The Oceanic Niño Index (ONI) is a measure of the SST anomaly in the east-central Pacific and is a standard index of the El Niño/Southern Oscillation (ENSO) cycle. The ONI index is 3-month running mean of ERSST.v5 SST anomalies in the Niño 3.4 region, based on centered 30-year base periods updated every 5 years.  The ONI was downloaded from the NOAA National Weather Service Climate Prediction Center. The Dipole Mode Index (DMI) is defined by the SSTA difference between the 
 western Indian Ocean (10°S–10°N, 50°E–70°E) and the southeastern Indian Ocean (10°S–0°, 90°E–110°E). The DMI has been shown to predict anoxic events in our study area [@Vallivattathillametal2017].  The DMI data were downloaded from the NOAA Earth System Research Laboratory. See Appendix G for the data servers where the ENSO data were downloaded and computation notes and references.
@@ -141,7 +136,7 @@ We compared the following catch models:
 * GAM AR-1: $ln(C_{i,t}) = \alpha + s(ln(C_{j,t-1})) + \epsilon_t$
 * GAM AR-2: $ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + \epsilon_t$
 
-\noindent $ln(C_{i,t})$ is the log catch in the current year $t$ in season $i$. We modeled two different catches:  $S_t$ (Jul-Sep) and $N_t$ (Oct-Jun).  The catches were logged to stabilize and normalize the variance.  $s()$ is a non-linear function estimated by the GAM algorithm.  The model is primarily statistical, meaning it should not be thought of as a population growth model.  We tested models with prior year and two years prior Oct-Mar catch ($N_{t-1}$ and $N_{t-2}$) and Jul-Sep catch ($S_{t-1}$ and $S_{t-2}$) as the explanatory catch variable. $S_t$ was not used as a predictor for $N_t$ because $S_t$ is the quarter immediately prior to $N_t$ and would not be available for a forecast model since time is required to process landings data. The catch models were fit to 1984 to 2015 catch data, corresponding to the years when the SST, upwelling and precipitation data were available.  F-tests, AIC and leave-one-out cross-validation (LOOCV) on nested sets of models [@Woodetal2016] were used to evaluate the support for the catch models and later for the covariate models.  LOOCV involves leaving out a data point, fitting the model, and then predicting the left-out data point. The root mean squared error (RMSE) is reported for the set of prediction errors (this is also known as the predicted residual error sum of squares or PRESS statistic). After selection of the best model with the 1984-2015 data, the fitting was repeated with the 1956-1983  catch data to confirm the form of the catch models. An influential years test was done by removing each year and repeating the model selection analysis.
+\noindent $ln(C_{i,t})$ is the log catch in the current year $t$ in season $i$. We modeled two different catches:  $S_t$ (Jul-Sep) and $N_t$ (Oct-Jun).  The catches were logged to stabilize and normalize the variance.  $s()$ is a non-linear function estimated by the GAM algorithm.  The model is primarily statistical, meaning it should not be thought of as a population growth model.  We tested models with prior year and two years prior Oct-Mar catch ($N_{t-1}$ and $N_{t-2}$) and Jul-Sep catch ($S_{t-1}$ and $S_{t-2}$) as the explanatory catch variable. $S_t$ was not used as a predictor for $N_t$ because $S_t$ is the quarter immediately prior to $N_t$ and would not be available for a forecast model since time is required to process landings data. The catch models were fit to 1984 to 2015 catch data, corresponding to the years when the SST, upwelling and precipitation data were available. 
 
 Once the catch models were determined, the covariates were studied individually and then jointly. As with the catch models, F-tests, AIC and LOOCV (leave-one-out cross-validation) on nested sets of models were used to evaluate the support for models with covariates.  The smoothing term was fixed at an intermediate value (sp=0.6) instead of being treated as an estimated variable.  Our models for catch with covariates  took the form
 $ln(C_{i,t}) = M + \alpha + s_1(V_{1,t}) + s_2(V_{2,t-1}) + \epsilon_t$, $ln(C_{i,t}) = M + \alpha + \beta_1 V_{1,t} + \beta_2 V_{2,t-1} + \epsilon_t$, and $ln(C_{i,t}) = M + \alpha + \beta_t V_{1,t} + \epsilon_t$
@@ -152,7 +147,7 @@ where $M$ was the best catch model from step 1 and $V$ is a covariate.  Thus mod
 
 ## Catches in prior seasons as explanatory variables
 
-Using the 1984-2015 catch data, the time-period that overlaps our available environmental data, the Jul-Sep catch models were compared against a "naive" model in which the forecasted Jul-Sep catch is the Jul-Sep catch in the prior year.  The "naive" model has no estimated parameters and is a standard null model for time series modeling. Models with $ln(N_{t-1})$ (Oct-Mar catch in prior year) as the explanatory covariate were strongly supported over the naive model and over models with $ln(S_{t-1})$ (Jul-Sep catch in prior year) as the explanatory variable (Tables `r ref("tabappA:spawner-model-linear", pre="A")` and `r ref("tabappA:spawner-model-nonlinear", pre="A")`).  Addition of the catch two years prior, $ln(N_{t-2})$ or $ln(S_{t-2})$, was not supported (by AIC or F-tests) for either the linear or non-linear models.  We tested the support for non-linearity in the effect of the prior year catch by comparing models with $ln(N_{t-1})$ or $ln(S_{t-1})$ included as a linear effect or as a non-linear effect using GAMs (Table A2).  The residual error decreased using a non-linear response and LOOCV decreased but at the cost increased degrees of freedom.  Overall there were three models with almost idential AIC and LOOCV: linear and non-linear with $ln(N_{t-1})$, and non-linear with $ln(N_{t-1})$ and $ln(N_{t-2})$. We choose the non-linear with $ln(N_{t-1})$ as the base catch model based on further diagnostic tests (described below) and to minimize loss of degrees of freedom. The adjusted $R^2$ of this model was 24.4%.
+Using the 1984-2015 catch data, the time-period that overlaps our available environmental data, the Jul-Sep catch models were compared against a "naive" model in which the forecasted Jul-Sep catch is the Jul-Sep catch in the prior year.  The "naive" model has no estimated parameters and is a standard null model for time series modeling. Models with $ln(N_{t-1})$ (Oct-Mar catch in prior year) as the explanatory covariate were strongly supported over the naive model and over models with $ln(S_{t-1})$ (Jul-Sep catch in prior year) as the explanatory variable (Tables `r ref("tabappA:spawner-model-linear", pre="A")` and `r ref("tabappA:spawner-model-nonlinear", pre="A")`).  Addition of the catch two years prior, $ln(N_{t-2})$ or $ln(S_{t-2})$, was not supported (by AIC or F-tests) for either the linear or non-linear models.  We tested the support for non-linearity in the effect of the prior year catch by comparing models with $ln(N_{t-1})$ or $ln(S_{t-1})$ included as a linear effect or as a non-linear effect using GAMs.
 
 As diagnostic checks, we repeated the model comparisons with the landings data set from 1956 to 1983. The results were the same for the Jul-Sep catch (Table `r ref("tabappA:spawner-model-1956", pre="A")`) with the model with $ln(N_{t-1})$ included as a non-linear covariate giving the lowest AIC and LOOCV. For the Oct-Mar catch (Table `r ref("tabappA:nonspawner-model-time-c", pre="A")`), the results were very similar but not identical. The model with $ln(N_{t-1})$ included as a non-linear covariate had the lowest LOOCV while the models with $ln(N_{t-1})$ and $ln(S_{t-2})$ or $ln(S_{t-2})$ had the lowest AIC (though less than 1 from the AIC of the $ln(N_{t-1})$ model). We also did an influential years test using leave-one-out cross-validation (Appendix F). This test involved leaving out one year and repeating the model selection tests. This analysis supported the selected base models using the 1984-2015 data. The dynamic linear models (allowing a time-varying effect of prior catch) performed poorly for the Jul-Set catch with high AIC and LOOCV. For the Oct-Mar catch, the performance was mixed with higher AIC but lower LOOCV for one of the DLMs.
 
@@ -177,9 +172,6 @@ Sardines in all the world's ecosystems exhibit large fluctuations in abundance [
 
 Many studies on Pacific sardines have looked at the correlation between ocean surface temperature (SST) and recruitment.  Temperature can have direct effect on larval survival and growth and an indirect effect on food availability.  Studies in the California Current System, have found that SST explains (a portion of) year-to-year variability in Pacific sardine recruitment [@JacobsonMacCall1995; @Checkleyetal2009; @LindegrenCheckley2012; @Checkleyetal2017] and that the average nearshore temperature over multiple seasons is the relevant explanatory variable. Similar to  these studies, we found that the average nearshore SST over multiple seasons was the covariate that explained the most variability in catch both in the monsoon and post-monsoon months. McClatchie et al. [-@McClatchieetal2010] found no  relationship with SST and Pacific sardine recruitment, however their analysis used a linear relationship while the other studies, and ours, that found a relationship allowed non-linearity.  Both Jacobson and MacCall (1995) and Checkley et al. (2017) found a step-like response function for temperature: below a threshold value the effect of temperature was linear  and above the threshold, the effect was flat and at lower temperatures the effect was negative and became positive as temperature increased.  Our analysis found a similar pattern with a negative effect when the 2.5-year average temperature was below $28.35^\circ$C and positive above and with the positive effect leveling off above $28.5^\circ$C (Figure `r ref("fig:cov-effects")`).
 
-There were four outlier years when Oct-Mar oil sardine landings were much lower than expected based on prior catches: 1986, 1991, 1994 and 2013 (Figure `r ref("fig:fitted")`, Panel C).  The 2.5-year average SST explained the collapses in 1986 and 1991; the size of the prediction was much closer to the observed catch (Figure `r ref("fig:fitted")`, Panel D). The largest collapse was in 1994 and the most recent, in our dataset, was 2013. The 2.5-year average SST did not explain the 1994 nor 2013 collapses. There was no change in the size  of the residual with and without the covariate. The same pattern was seen for the Jul-Sep catch, with the exception that 1991 did not have unusually low Jul-Sep catch. The 2.5-year average SST reduced the prediction error for 1986, but did not (appreciably) for 1994 nor 2013. In fact, none of the covariates we tested explained the lower than expected 1994 and 2013 catches. The causes of these unusual declines appear unrelated to the environmental factors we studied, suggesting either that other factors, biological or anthropogenic, drove these declines or that a particular combination of environmental factors led to the declines. It should also be noted that our upwelling indices captured only one aspect of upwelling: the nearshore intensity. Other aspects of upwelling also affect oil sardines, such as the spatial extent both along the coast and off the coast and the timing of the start of upwelling. 
-
-Seasonal productivity in the Southeast Arabian Sea upwelling system is driven by the summer monsoon, which causes strong coastal upwelling that moves from the south to the north over the summer. This drives a strong seasonal pattern of zooplankton abundance (Figure `r ref("fig:SSTts")`). There are biological reasons to expect a positive relationship between upwelling intensity and landings: upwelling drives productivity and higher food resources in the current season which leads to higher larval and juvenile survival and higher numbers of 0-year fish in the landings and brings sardines into the nearshore to feed where they are exposed to the fishery. These positive effects on 0-year fish would cascade to future seasons also. Despite the strong connection between sardine recruitment, growth and survival with upwelling, we found that none of our upwelling indices in the prior season explained the year-to-year variation in landings. We did find that the upwelling intensity in the current season explained variability in landings in the current season, however, the effect was negative not positive and the negative effect emerged at extremely high upwelling (Figure `r ref("fig:cov-effects")`). This negative effect is not surprising. Extremely high upwelling transports larval sardines offshore and creates regions of low oxygen which sardines avoid [@Guptaetal2016]. What was surprising is that the effect was not uni-modal, with a positive effect at low to moderate upwelling and becoming negative for extremely high upwelling.
 
 # Conclusions
 
@@ -215,6 +207,12 @@ Figure `r ref("fig:COVts")`.  Remote sensing covariates used in the analysis.  A
 Figure `r ref("fig:cov-effects")`.  Effects of the two most influential covariates estimated from the GAM models: 2.5 year average nearshore (boxes 2-5) SST and upwelling intensity in June-September (spawning months). Panel A) Effect of the 2.5 year average nearshore SST on Jul-Sep catch (late spawning and early post-spawning months).   Panel B) Effect of upwelling (nearshore/offshore SST differential) during June-September in the current season on Jul-Sep catch.  The index is the difference between offshore and inshore SST, thus a negative value indicates warmer coastal surface water than offshore.  Panel C) Effect of the 2.5 year average nearshore SST on Oct-Mar catch (post-monsoon, age-0, -1, -2 year fish). Panel D) Effect of upwelling (nearshore/offshore SST differential) during June-September in the current season on Oct-Mar catch.
 
 Figure `r ref("fig:fitted")`.  Fitted versus observed catch with models with and without the 2.5 year average nearshore SST included as a covariate.  The line is the one-to-one line (prediction equals observed). Panel A) Fitted versus observed log catch in Jul-Sep (late monsoon) with only Oct-Mar catch in the previous season as the covariate: $S_t = s(N_{t-1}) + \epsilon_t$. Panel B) Fitted versus observed log catch in Jul-Sep with the 2.5-year average SST added as a covariate to the model in panel A. This model was: $S_t = s(N_{t-1}) + s(V_{t}) + \epsilon_t$. Panel C) Fitted versus observed log Oct-Mar catch with only Oct-Mar catch in the previous season and Jul-Sep catch two seasons prior as the covariates: $N_t = s(N_{t-1}) + s(S_{t-2}) + \epsilon_t$. Panel D) Fitted versus observed log Oct-Mar catch with 2.5-year average SST ($V$) added. This model was $N_t = s(N_{t-1}) + s(S_{t-2}) + s(V_t) + \epsilon_t$.
+
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
 
 ```{r child = 'Tables.Rmd', echo=FALSE}
 ```
